# scriba-rs

./: .gitignore  Cargo.toml  README.md  build.rs
examples/: basic.rs
medium/: ARTICLE.md
slint-ui/: app.slint  i18n.slint  setup.slint  theme.slint  widgets.slint
src/: config.rs  gui.rs  i18n.rs  lib.rs  models.rs  recorder.rs  whisper.rs
