[package]
name = "scriba-rs"
version = "0.1.0"
edition = "2021"
description = "Scriba — embeddable speech-to-text transcription widget"
license = "AGPL-3.0-or-later"
repository = "https://github.com/dariofinardi/scriba-rs"
build = "build.rs"

[dependencies]
scriba-core = { git = "https://github.com/dariofinardi/scriba-core-rs.git", tag = "v20260606" }
whisper-rs = { git = "https://github.com/dariofinardi/whisper-rs.git", tag = "v20260606" }
slint = { version = "1.8", features = ["backend-winit"] }
i-slint-backend-winit = "1.8"
winit = "0.30"
cpal = "0.15"
anyhow = "1"
log = "0.4"
dirs = "5"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
rfd = "0.15"
arboard = "3"
tray-icon = "0.19"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sherpa-rs = { version = "0.6", optional = true, default-features = false, features = [] }
mic-rs = { git = "https://github.com/dariofinardi/mic-rs.git", tag = "v20260606", optional = true }
tokio = { version = "1", features = ["rt-multi-thread"], optional = true }

[build-dependencies]
slint-build = "1.8"

[features]
default = []
diarize = ["scriba-core/diarize", "sherpa-rs"]
recorder = ["mic-rs", "tokio"]
cuda = ["scriba-core/cuda"]
metal = ["scriba-core/metal"]
vulkan = ["scriba-core/vulkan"]

[profile.release]
opt-level = 3
lto = true
